[gd_scene load_steps=11 format=4 uid="uid://br3fol8v2fo6d"]

[ext_resource type="Texture2D" uid="uid://djo0m2c1i7at8" path="res://img/CampamentoBase.png" id="1_n6grl"]
[ext_resource type="Script" path="res://scripts/campamento_principal.gd" id="1_pivhe"]
[ext_resource type="Texture2D" uid="uid://d26o24pqj7vww" path="res://img/PinguPescadorCampamento.png" id="3_0jmmu"]
[ext_resource type="AudioStream" uid="uid://dlpx7kwfrocwo" path="res://sonidos/musicas/MusicaCampamento.ogg" id="3_i8g5e"]
[ext_resource type="Texture2D" uid="uid://bqwcukdqyuihr" path="res://img/IconitoSensei.png" id="3_napv8"]
[ext_resource type="Texture2D" uid="uid://bm12ds5cqr24s" path="res://img/bocadillo.png" id="4_emtuw"]
[ext_resource type="TileSet" uid="uid://cep2lotas44ko" path="res://tiles/interiores.tres" id="4_kvgku"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="5_icwuk"]
[ext_resource type="Texture2D" uid="uid://dqbhpf08wp88s" path="res://img/IgluJefe.png" id="6_s1bnf"]
[ext_resource type="Texture2D" uid="uid://bpwkkl2jeg6eo" path="res://img/TiendaIglu.png" id="7_85evh"]

[node name="CampamentoPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pivhe")

[node name="Botones" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BotonTienda" type="Button" parent="Botones"]
layout_mode = 0
offset_left = -289.0
offset_top = -208.0
offset_right = -101.0
offset_bottom = -63.0
mouse_default_cursor_shape = 2

[node name="BotonCasaJefe" type="Button" parent="Botones"]
layout_mode = 0
offset_left = 136.0
offset_top = -210.0
offset_right = 324.0
offset_bottom = -65.0
mouse_default_cursor_shape = 2

[node name="BotonCasa1Dcha" type="Button" parent="Botones"]
layout_mode = 0
offset_left = 336.0
offset_top = -148.0
offset_right = 500.0
offset_bottom = -32.0
mouse_default_cursor_shape = 2

[node name="BotonCasa2Dcha" type="Button" parent="Botones"]
layout_mode = 0
offset_left = 429.0
offset_top = -31.0
offset_right = 593.0
offset_bottom = 84.0
mouse_default_cursor_shape = 2

[node name="BotonCasa3Dcha" type="Button" parent="Botones"]
layout_mode = 0
offset_left = 217.0
offset_top = 3.0
offset_right = 381.0
offset_bottom = 128.0
mouse_default_cursor_shape = 2

[node name="BotonCasa4Dcha" type="Button" parent="Botones"]
layout_mode = 0
offset_left = 362.0
offset_top = 123.0
offset_right = 526.0
offset_bottom = 248.0
mouse_default_cursor_shape = 2

[node name="BotonCasa1Izq" type="Button" parent="Botones"]
layout_mode = 0
offset_left = -580.0
offset_top = -161.0
offset_right = -416.0
offset_bottom = -36.0
mouse_default_cursor_shape = 2

[node name="BotonCasa2Izq" type="Button" parent="Botones"]
layout_mode = 0
offset_left = -410.0
offset_top = -56.0
offset_right = -246.0
offset_bottom = 69.0
mouse_default_cursor_shape = 2

[node name="BotonCasa3Izq" type="Button" parent="Botones"]
layout_mode = 0
offset_left = -600.0
offset_top = 26.0
offset_right = -448.0
offset_bottom = 151.0
mouse_default_cursor_shape = 2

[node name="BotonCasa4Izq" type="Button" parent="Botones"]
layout_mode = 0
offset_left = -433.0
offset_top = 125.0
offset_right = -267.0
offset_bottom = 251.0
mouse_default_cursor_shape = 2

[node name="Fondo" type="Sprite2D" parent="."]
texture = ExtResource("1_n6grl")

[node name="PinguPescador" type="Sprite2D" parent="."]
visible = false
position = Vector2(-37, -143)
scale = Vector2(-1.26648, 1.09685)
texture = ExtResource("3_0jmmu")

[node name="Flechas1" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD8//T/AwALAAMAAAD+//T/AwALAAMAAAA=")
tile_set = ExtResource("4_kvgku")

[node name="Flechas2" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD+//P/AwALAAMAAAD8//P/AwALAAMAAAA=")
tile_set = ExtResource("4_kvgku")

[node name="ExplicarCampamento" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -600.0
offset_top = -256.0
offset_right = 600.0
offset_bottom = 256.0

[node name="ColorRect" type="ColorRect" parent="ExplicarCampamento"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 512.0
color = Color(0, 0, 0, 0.7)

[node name="IconoSensei" type="Sprite2D" parent="ExplicarCampamento"]
position = Vector2(60, 450)
scale = Vector2(0.2, 0.193)
texture = ExtResource("3_napv8")

[node name="BocadilloTexto" type="Sprite2D" parent="ExplicarCampamento"]
position = Vector2(569.949, 383.919)
rotation = 1.57357
scale = Vector2(0.493628, 1.83111)
texture = ExtResource("4_emtuw")
flip_h = true

[node name="TextoTutorialCampamento" type="Label" parent="ExplicarCampamento"]
layout_mode = 0
offset_left = 385.0
offset_top = 274.0
offset_right = 973.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_icwuk")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Continuar" type="Button" parent="ExplicarCampamento"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 1.0
offset_right = 1200.0
offset_bottom = 513.0

[node name="ClicParaContinuar" type="Label" parent="ExplicarCampamento"]
visible = false
layout_mode = 0
offset_left = 383.0
offset_top = 462.0
offset_right = 977.0
offset_bottom = 494.0
theme_override_colors/font_color = Color(0.156863, 0.211765, 0.494118, 1)
theme_override_fonts/font = ExtResource("5_icwuk")
theme_override_font_sizes/font_size = 32
text = "Clic para continuar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IgluJefe" type="Sprite2D" parent="ExplicarCampamento"]
visible = false
position = Vector2(818, 100)
texture = ExtResource("6_s1bnf")

[node name="IgluTienda" type="Sprite2D" parent="ExplicarCampamento"]
visible = false
position = Vector2(413, 100)
texture = ExtResource("7_85evh")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_i8g5e")

[node name="BotonPinguinoPescador" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -71.0
offset_top = -175.0
offset_bottom = -115.0
mouse_default_cursor_shape = 2

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-600, -256)

[node name="FlechasCasaJefe1" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAKAPz/AwAKAAMAAAAMAPz/AwAKAAMAAAAOAPz/AwAKAAMAAAAQAPz/AwAKAAMAAAASAPz/AwAKAAMAAAAHAPv/AwAMAAMAAAAHAPn/AwAMAAMAAAAHAPf/AwAMAAMAAAAHAPX/AwAMAAMAAAAKAPL/AwALAAMAAAAMAPL/AwALAAMAAAAOAPL/AwALAAMAAAAQAPL/AwALAAMAAAASAPL/AwALAAMAAAA=")
tile_set = ExtResource("4_kvgku")

[node name="FlechasCasaJefe2" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAKAP3/AwAKAAMAAAAMAP3/AwAKAAMAAAAOAP3/AwAKAAMAAAAQAP3/AwAKAAMAAAASAP3/AwAKAAMAAAAGAPv/AwAMAAMAAAAGAPn/AwAMAAMAAAAGAPf/AwAMAAMAAAAGAPX/AwAMAAMAAAAKAPH/AwALAAMAAAAMAPH/AwALAAMAAAAOAPH/AwALAAMAAAAQAPH/AwALAAMAAAASAPH/AwALAAMAAAA=")
tile_set = ExtResource("4_kvgku")

[connection signal="pressed" from="Botones/BotonTienda" to="." method="_on_boton_tienda_pressed"]
[connection signal="pressed" from="Botones/BotonCasaJefe" to="." method="_on_boton_casa_jefe_pressed"]
[connection signal="pressed" from="Botones/BotonCasa1Dcha" to="." method="_on_boton_casa_1_dcha_pressed"]
[connection signal="pressed" from="Botones/BotonCasa2Dcha" to="." method="_on_boton_casa_2_dcha_pressed"]
[connection signal="pressed" from="Botones/BotonCasa3Dcha" to="." method="_on_boton_casa_3_dcha_pressed"]
[connection signal="pressed" from="Botones/BotonCasa4Dcha" to="." method="_on_boton_casa_4_dcha_pressed"]
[connection signal="pressed" from="Botones/BotonCasa1Izq" to="." method="_on_boton_casa_1_izq_pressed"]
[connection signal="pressed" from="Botones/BotonCasa2Izq" to="." method="_on_boton_casa_2_izq_pressed"]
[connection signal="pressed" from="Botones/BotonCasa3Izq" to="." method="_on_boton_casa_3_izq_pressed"]
[connection signal="pressed" from="Botones/BotonCasa4Izq" to="." method="_on_boton_casa_4_izq_pressed"]
[connection signal="pressed" from="ExplicarCampamento/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="pressed" from="BotonPinguinoPescador" to="." method="_on_boton_pinguino_pescador_pressed"]
